 - Added a second boolean parameter to Spring.Get{Player,Team}Info, if it is false the function will not return
   the (now) last return value, the customKeys table (allocation optimisation)
 ! Spring.GetUnit{Armored,IsActive} now works on enemies in LoS
 ! Spring.GetUnitMass no longer works on enemies outside of LoS
 ! remove Spring.{Set,Get}UnitTravel
 - Added a boolean parameter to Spring.GetCameraState, if set to false it will return the current camera name
   and then the following camera-specific values on the stack:
     fps, rot -> oldHeight
     ta -> height, angle, flipped
     spring -> rx, ry, rz, dist
     free -> rx, ry, rz, vx, vy, vz, avx, avy, avz
     ov -> (nil)

AI:
 - reveal unit's captureProgress, buildProgress and paralyzeDamage params through
   skirmishAiCallback_Unit_get{CaptureProgress,BuildProgress,ParalyzeDamage} functions

Misc:
 - remove joystick support
 - detect hangs during filesystem initialisation
 - fix stale thread-id cache in watchdog after reload
 - make LuaVFSDownload rescan archives in main thread, and do so when a download finishes (not when one starts)
 - account for raw search in AICallback::GetPathLength
 - use hidden window for offscreen context rendering
 - add /hang command
 - add /luagccontrol command
 - add /netping command
 - add /netmsgsmoothing command
 - add /distsortprojectiles command
 - remove LuaShaders config-setting
 - change PitchAdjust config-setting from a boolean to an integer
   0 disables, 1 scales pitch by the square root of game speed, 2
   scales linearly with game speed
 - `/nocost` now accepts 0/1 parameter (still toggles if none given)
 - model metadata for assimp/obj can now define pieces hierarchy
   by either nested tables or 'parent' key.
 - IME editing support for those with the proper SDL2 version/IME tool combination
 ! Made lockluaui.txt obsolete: no longer necessary for it to exists in order to enable VFS for LuaUI
 - use SHA2 rather than CRC32 content hashes

Fixes: