@@ -206,7 +206,6 @@ class LuaSyncedCtrl
 		static int RemoveUnitCmdDesc(lua_State* L);
 
 		static int SetNoPause(lua_State* L);
-		static int SetUnitToFeature(lua_State* L);
 		static int SetExperienceGrade(lua_State* L);
 
 		static int SetRadarErrorParams(lua_State* L);
